fix banner animation & overlap

--- a/react-backend/app/styles/markdown.css
+++ b/react-backend/app/styles/markdown.css
@@ -2,7 +2,7 @@
   line-height: normal;
   color: #333;
   letter-spacing: 0.05em;
-  background-color: #FFF;
+  background-color: transparent;
   font-size:18px;
 }
 #markdown table  {
